# tdp_rust

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  TODO_filtering.md  TODO_tools.md  UX_DISCOVERY.md  config.docker.toml.example  config.toml  config.toml.example  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  package-lock.json
.beads/: issues.jsonl
.claude/agent-memory/ux-discovery-strategist/: MEMORY.md  discovery-session-2026-02-12.md
api/: CLAUDE.md  Cargo.toml
api/src/: activity.rs  error.rs  get_abstract.rs  get_image.rs  get_league_info.rs  get_paper_info.rs  get_paragraph.rs  get_references.rs  get_section.rs  get_table.rs  get_table_of_contents.rs  get_tdp_contents.rs  get_team_info.rs  lib.rs  list_leagues.rs  list_papers.rs  list_teams.rs  list_years.rs  paper_filter.rs  paper_navigation.rs  search.rs  suggestion.rs  update_team_info.rs
chat/: Cargo.toml
chat/src/: main.rs  notes.txt
configuration/: CLAUDE.md  Cargo.toml
configuration/src/: appconfig.rs  helpers.rs  lib.rs
data_access/: CLAUDE.md  Cargo.toml
data_access/src/: config.rs  lib.rs
data_access/src/activity/: mod.rs  sqlite_client.rs
data_access/src/embed/: fastembed_client.rs  mod.rs  openai_client.rs
data_access/src/file/: mod.rs  utilities.rs
data_access/src/metadata/: mod.rs  sqlite_client.rs
data_access/src/registry/: mod.rs  sqlite_client.rs
data_access/src/teams/: mod.rs  sqlite_client.rs
data_access/src/vector/: mod.rs  qdrant_client.rs
data_processing/: CLAUDE.md  Cargo.toml
data_processing/src/: config.rs  content_chunker.rs  create_idf.rs  create_paragraph_chunks.rs  create_sentence_chunks.rs  lib.rs  markdown_parser.rs  raw_chunk.rs  search.rs  tdp_to_chunks.rs  utils.rs
data_processing/src/chunk/: utils.rs
data_processing/src/embed/: embed_chunks.rs  mod.rs
data_processing/src/text/: create_idf.rs  match_names.rs  match_terms.rs  mod.rs
data_structures/: CLAUDE.md  Cargo.toml
data_structures/src/: content.rs  embed_type.rs  filter.rs  lib.rs  text_utils.rs  wer.rs
data_structures/src/file/: league.rs  mod.rs  tdp_name.rs  team_name.rs
data_structures/src/knowledge/: canonical_nugget.rs  mod.rs  nugget.rs  topic_card.rs
data_structures/src/mock/: mock_vector.rs  mod.rs
data_structures/src/paper/: mod.rs  paragraph.rs  tdp.rs  tdp_structure.rs  text.rs
data_structures/src/scoring/: info_score.rs  mod.rs
data_structures/src/structure/: mod.rs  paragraph.rs  sentence.rs  tdp_structure.rs  text.rs
data_structures/src/taxonomy/: hierarchy.rs  mod.rs  topic.rs  topic_path.rs
docs/: architecture.drawio
docs/discovery/: ACTIVITY_PLANS.md  GITHUB_DEEPDIVE.md  NAME_ISSUE.md
docs/plans/: 2026-03-10-paper-reader-redesign.md
docs/superpowers/plans/: 2026-03-12-unified-filter-layout.md  2026-03-12-web-search-improvements.md  2026-03-20-event-processing.md  2026-03-22-suggestions-endpoint.md  2026-03-25-team-registry.md  2026-03-30-pdf-serving.md  2026-03-31-remove-index.md  2026-04-04-idf-highlight-terms.md  2026-04-13-connect-api-page.md  2026-04-13-get-references.md
docs/superpowers/specs/: 2026-03-12-unified-filter-layout-design.md  2026-03-12-web-search-improvements-design.md  2026-03-19-event-processing-design.md  2026-03-22-suggestions-endpoint-design.md  2026-03-25-team-registry-design.md  2026-03-30-pdf-serving-design.md  2026-03-31-remove-index-design.md  2026-04-04-idf-highlight-terms-design.md  2026-04-13-connect-api-page-design.md  2026-04-13-get-references-design.md
event_processing/: CLAUDE.md  Cargo.toml
event_processing/src/: dispatcher.rs  lib.rs
event_processing/src/listeners/: mod.rs  sqlite.rs  telegram.rs
frontend/: CLAUDE.md  README.md  SETUP_INSTRUCTIONS.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  leagueColors.ts  markdown.ts  types.ts
frontend/src/lib/components/: ActiveFilterChips.svelte  ChunkResult.svelte  FilterSidebar.svelte  Footer.svelte  Navbar.svelte  PaperCard.svelte  PaperGroup.svelte  SearchBar.svelte  TableOfContents.svelte  TeamInfoSidebar.svelte  ThemeToggle.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/(browse)/: +layout.svelte  +page.svelte
frontend/src/routes/(browse)/search/: +page.svelte  +page.ts
frontend/src/routes/connect/: +layout.svelte  +page.svelte
frontend/src/routes/connect/api/: +page.svelte
frontend/src/routes/connect/mcp/: +page.svelte
frontend/src/routes/paper/[id]/: +page.svelte  +page.ts
frontend/src/routes/search/: +page.svelte  +page.ts
frontend/src/routes/suggestions/: +page.svelte
frontend/src/routes/teams/edit/: +page.svelte
mcp/: CLAUDE.md  Cargo.toml
mcp/src/: main.rs  oauth.rs  server.rs  state.rs
mcp/src/tools/: calculator.rs  get_tdp_contents.rs  list_leagues.rs  list_teams.rs  mod.rs  search.rs
mybin/: Cargo.toml
mybin/src/: main.rs
pipeline/: Cargo.toml
pipeline/src/: config.rs  main.rs
scripts/: qdrant_count_points.sh  qdrant_create_download_delete_snapshot.sh  qdrant_delete_all_snapshots.sh  rebuild_index.sh
src/: lib.rs
tests/: test_custom_fastembed.rs  test_embedding_consistency.rs  test_load_all_tdp_jsons.rs  test_parse_all_tdp_jsons.rs
tools/: CLAUDE.md  Cargo.toml
tools/src/: lib.rs  main.rs
utilities/: Cargo.toml
utilities/src/: create_paragraph_chunks.rs  lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
web/: CLAUDE.md  Cargo.toml
web/src/: dto.rs  error.rs  main.rs  middleware.rs  state.rs
web/src/routes/: abstract_text.rs  api_index.rs  image.rs  leagues.rs  mod.rs  paper_info.rs  papers.rs  paragraph.rs  pdfs.rs  references.rs  registry.rs  search.rs  suggestion.rs  table.rs  table_of_contents.rs  tdps.rs  team_registry.rs  teams.rs  years.rs
