resolver = "2"

[workspace]
members = [ 
    "data_access",
    "data_structures",
    "mybin",
]

[package]
name = "tdp_rust"   # meta crate name
version = "0.1.0"
edition = "2021"

[dependencies]
data_access = { path = "data_access" }
data_structures = { path = "data_structures" }
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "test-util", "time"] }

