[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
schemars = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
thiserror = "2.0.18"

configuration = { path = "../configuration" }
data_access = { path = "../data_access" }
data_processing = { path = "../data_processing" }
data_structures = { path = "../data_structures" }

[dev-dependencies]
mockall = "0.14.0"