[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
configuration = { version = "0.1.0", path = "../configuration" }
tokio = "1.49.0"
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
