[package]
name = "configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
data_access = { path = "../data_access" }
tracing = { workspace=true }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
thiserror = "2.0.16"
anyhow = "1.0.100"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v5"] }
config = "0.15.19"