[package]
name = "data_access"
version = "0.1.0"
edition = "2024"

[dependencies]
data_structures = { path = "../data_structures" }

tracing = { workspace=true }
tracing-subscriber = { workspace=true }
qdrant-client = "1.15.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
fastembed = "5.2.0"
thiserror = "2.0.16"
anyhow = "1.0.100"
async-trait = "0.1.89"
async-openai = "0.30.1"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v5"] }