[package]
name = "data_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace=true }
data_structures = { path = "../data_structures" }
data_access = { path = "../data_access" }
ndarray = "0.17.1"
num-traits = "0.2.19"
uuid = { version = "1.19.0", features = ["v5"] }
futures = "0.3.31"
