[package]
name = "event_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
async-trait = "0.1.89"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
