[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.8"
rmcp = { version = "0.17.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }

api = { path = "../api" }
configuration = { path = "../configuration" }
data_access = { path = "../data_access" }
data_processing = { path = "../data_processing" }
data_structures = { path = "../data_structures" }
thiserror = "2.0.18"

[dev-dependencies]
mockall = "0.14.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"