[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
data_access = { path = "../data_access" }
data_processing = { path = "../data_processing" }
data_structures = { path = "../data_structures" }

tracing = { workspace=true }
tracing-subscriber = { workspace=true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = "1.48.0"
uuid = { version = "1", features = ["v5"] }
config = "0.15.19"
thiserror = "2.0"

