[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"

api = { path = "../api" }
configuration = { path = "../configuration" }
data_access = { path = "../data_access" }
data_processing = { path = "../data_processing" }
data_structures = { path = "../data_structures" }
